[package]
name = "diesel_nested_types"
version = "0.1.0"
authors = ["Michael Anderson <drmikeando@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "sqlite"] }
